plang/testing/logs/false-incorrect/50/program50.p.p
sI.

mM tgKp (TFamv) eg :- gwK.
yzPs rU (kU) nuAY :- nqs K (whFH (d (Ql) (hrE (x)) Cf9 ajlB6) (Apb) (c (fFN (S) lPLb (R) (HxT)) b7C (Ii)) (uSx6 dY8O)).
sejRW (Un) Oiht :- (irg4).

zd X8 (h4 MmU Lu pnc BxYJQ).

u (JAi4) :- ((k (GU) vw; yH; cu (AFFnx) (LMP) (Zw) (AySA); j53Q (a (uObeY (Id) (MAUiK) (s6T NJr oeBa6 (zVW HwyzA (Y) cX9n (uq9Ws (sLe) (w2dK ytF) i7Q7 (kCZM am65))))) (F8Koj) (bIia p oU7 HDl (Ll)) t) (rA) Or (wUgz UnFXf eIWQZ (g EhtLT KYHb (hVQo)) Fm))); (j (Gcj) (R) (R) (VPH)); c (Xm57) bc (tKfP (cE (UX5) (p JJeO5 GOJN (aVOb) (C)) elyM (mrg (BdX2z) io eAnfO (OO9))) (KEY1i)) (HEp1); w YMS; sv (yYoo (u (c54) (JOu) (L5l))) (sc (w (D)) x4) (cl (igxx5 OV7U (nFPD4 D (g Y (bLM o5g0o) (dV qv) NK99) (SXFlq)) aO6XY) (Y)) P2; xFyDy; i6 (KzZ).

p yp TJ (dJS6q (Q0v)) (ZV).
kd :- d (GQfb).

qQb :- f8wP; g2 Cyy7 (v), yCn fA; ekhDA; c6 (b (lgR WcFf7 (uRJ XG5Nt Zy WRpM (AEOs)))) GZCAa XyWI BD; c, u D (IzSQy), fuL Q; (uPw (VrUz)); oe, (q (c7s (OxX8D)) KNp (Hi)); zn6Xu (S); nXU P (Qf2); (uvIQ3 (M) (RCVdZ)), wd nG A F, (eH).


s8 (jaI (ed (UwZw) V (AkU) ixA) p5 DdgM) (o (rpJb IA3Z9 (n63Ff) b)) (do (Y7cqY) (Az) (HqO) d) Oqt :- mK (bO6Tk (AEGaR)) Eg hrT8Y l, eE, oRv; ej; (yiTg L (rDkAR (fwU K) ba zAK CY) MlJ Y); e4, eEFY (qJB) (LIUG) Q WLMV; o2q T D (F8D); sFVXn pxKsq ys (K) fu0c, bBRTl cbIwI (Y) (U) yKn; (gH7 (jXMv Ceibu (A) BzeIA Em) P7Seb).

dPmXX :- (wu EcUgt (PY) (Gs7) a).


? eNX, cke (wKPb (jQKQ (eh i) H9 A7) JnMx e3hoT) j h oiU1z, g8H; w.


